# minha-receita-rs

./: .gitignore  Cargo.toml  README.md
src/: cli.rs  download.rs  error.rs  lib.rs  lifecycle.rs  main.rs  output.rs  query.rs  schema.rs  transform.rs
tests/: cli.rs  e2e.rs  lifecycle_smoke.rs  query_smoke.rs
tests/common/: mod.rs
