[package]
name = "minha-receita-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
datafusion = "44"
arrow = { version = "53", features = ["csv", "json"] }
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream", "json"] }
futures = "0.3"
zip = "2"
encoding_rs = "0.8"
encoding_rs_io = "0.1"
comfy-table = "7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
indicatif = "0.17"
scraper = "0.20"
dirs = "5"

[dev-dependencies]
mockito = "1"
tempfile = "3"
assert_cmd = "2"
predicates = "3"
